--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 ftptool==0.7.1
--e git+http://github.com/szlaci83/mediafire-python-open-sdk.git@d5f1d7d89ce0a53a5c2ce0728b9f689ba402e8cb#egg=mediafire
+-e git+http://github.com/szlaci83/mediafire-python-open-sdk.git@3f129a0149d8fea50f77016da781b3ba61364d61#egg=mediafire
+Pillow==7.0.0
 pymongo==3.10.0
 requests==2.11.1
 requests-toolbelt==0.9.1
