--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 ftptool==0.7.1
 -e git+http://github.com/szlaci83/mediafire-python-open-sdk.git@fix_res_up#egg=mediafire
-Pillow==7.0.0
 pymongo==3.10.0
 requests==2.11.1
 requests-toolbelt==0.9.1
 six==1.12.0
 Unidecode==1.1.1
+urllib3==1.26.9
+
